--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+seceng-common (1.1.0) noble; urgency=medium
+
+  * repo-sync: Use ssh key instead of ssh dir
+
+ -- Paulo Flabiano Smorigo <pfsmorigo@canonical.com>  Tue, 27 Jan 2026 18:15:00 +0000
+
 seceng-common (1.0.2) noble; urgency=medium
 
   * Bug fixes and improvements for repo-sync.
