--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+seceng-common (1.2.0) noble; urgency=medium
+
+  * rsync-daemon: new subordinate charm added
+
+ -- Ian Constantin <ian.constantin@canonical.com>  Mon, 23 Feb 2026 14:44:20 +0200
+
 seceng-common (1.1.0) noble; urgency=medium
 
   * repo-sync: Use ssh key instead of ssh dir
